Change colors and fix contrast issues

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@
 }
 
 :root {
-  --red: #ee7c7c;
-  --blue: #d3fffb;
-  --blue2: #92eee8;
+  --white: #f1f5fd;
+  --blue: #bcf0ff;
+  --blue2: #527ac7;
   font-size: 19px;
   font-weight: 500;
   font-family: 'Merriweather', serif;
@@ -23,7 +23,7 @@ body {
 }
 
 header {
-  background-color: var(--blue2);
+  background-color: var(--white);
   width: 100%;
   height: 5rem;
   margin-bottom: 5rem;
@@ -40,7 +40,7 @@ header {
 .logo {
   font-size: 2.6rem;
   font-style: italic;
-  text-shadow: 2px -1px white;
+  text-shadow: 2px -1px 2px black;
   margin: 1rem 0 1rem 0;
 }
 
@@ -55,9 +55,6 @@ header {
   flex-direction: column;
   align-items: center;
   padding: 25px;
-  background-color: var(--red);
-  box-shadow: 0 0 10px black;
-  border-radius: 10px;
 }
 
 .item:hover {
@@ -114,6 +111,7 @@ li {
 }
 
 footer {
+  color: var(--blue2);
   position: absolute;
   bottom: 0;
 }
@@ -121,14 +119,16 @@ footer {
 /* GROUPS */
 
 .div-ingredients , .div-steps {
-  background-color: var(--red);
-  color: white;
-  box-shadow: 0 0 10px black;
-  border-radius: 10px;
   max-width: 900px;
   margin: 0 3rem;
   margin-top: 3rem;
   padding: 1px 15px 30px 15px;
+}
+
+.item, .div-ingredients , .div-steps {
+  background-color: var(--blue2);
+  box-shadow: 0 0 10px black;
+  border-radius: 10px;
 }
 
 .div-ingredients h3, .div-steps h3 {
@@ -146,12 +146,12 @@ header, .recipe-head, footer {
   font-weight: 600;
 }
 
-.item a:hover, .item h2 {
-  color: white;
+.item a:hover, .item h2, .div-ingredients , .div-steps {
+  color: var(--white);
 }
 
 .logo, .recipe-head h2 {
-  color: var(--red);
+  color: var(--blue2);
   font-weight: 900;
 }
 
